<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.manhica.maltem.magdss.activity.VisitActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="FIELDWORKER NAME"
        android:id="@+id/visit_tv_fieldworker"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/visit_tv_fieldworker_type"
        android:layout_below="@+id/visit_tv_fieldworker"
        android:layout_alignParentEnd="true" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:id="@+id/visit_bt_ronda"
        android:layout_below="@+id/visit_tv_fieldworker_type"
        android:layout_alignParentStart="true"
        android:text="@string/label_round" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/visit_bt_ronda"
        android:layout_alignParentStart="true"
        android:id="@+id/visit_bt_add_pregnancy"
        android:text="@string/label_add_pregnancy" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/visit_bt_add_pregnancy"
        android:layout_alignParentStart="true"
        android:id="@+id/visit_bt_supervision"
        android:text="@string/label_supervision" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/visit_bt_supervision"
        android:layout_alignParentStart="true"
        android:text="@string/label_sync"
        android:id="@+id/visit_bt_sync" />

</RelativeLayout>
