<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.manhica.maltem.magdss.activity.HouseholdActivity"
    tools:showIn="@layout/activity_household">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
       >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/household_iv_status"
            android:layout_alignParentTop="true"
            android:src="@drawable/check"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_household_head"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/household_iv_status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_household_number"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_last_visit"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView8"
            android:layout_below="@+id/household_iv_status"
            android:layout_toEndOf="@+id/household_iv_status" />

    </RelativeLayout>
    <android.support.v7.widget.ListViewCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/household_lv_members">

    </android.support.v7.widget.ListViewCompat>
</LinearLayout>
